service-org2.yaml
apiVersion:  v1
kind: Service
metadata: 
    name: org2-website-service
    namespace:  default
spec: 
    selector:
       app: org2-website
    type: ClusterIP
    ports: 
        - protocol: TCP
          port: 80
          targetPort: 80
