service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nonprofit-website-service
  namespace: default
spec:
  selector:
    app: nonprofit-website
  type:  NodePort
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
