gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
metadata; 
    name: nonprofit-gateway
    namespace: default
spec: 
    gatewayClassName: nginx
    listeners: 
        - name: http
        protocol: HTTP
        port: 80
