httproute-org1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: 
    name: org1-route
    namespace: default
spec: 
    parentRefs: 
       - name: nonprofit-gateway 
    hostnames:
       -  "org1.localhost" 
    rules:
     - backendRefs: 
        - name: nonprofit-website-service
          port: 80
