httproute-org2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: 
    name: org2-route
    namespace: default
spec: 
    parentRefs: 
    - name: org2-gateway 
    hostnames: 
        - "org2.localhost" 
    rules: 
        - backendRefs: 
            - name: org2-website-service
              port: 80
